mgr: handle race with finisher after shutdown

The module is deleted when modules is cleared. The notify method is
called on a destructed class.

Fixes: https://tracker.ceph.com/issues/42744
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 40c4b9ac9d8e2b2c17269affada304f5e1554974)

Conflicts:
	src/mgr/ActivePyModules.cc
- nautilus has capitalized lock.Lock and lock.Unlock
- finisher.queue calls look different in nautilus